--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/7ac6e7be0c.js" crossorigin="anonymous"></script>
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -32,16 +36,16 @@
                         <div class="col">
                             <ul id="nav" class="list-inline menu-container">
                                 <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
-                                    <a href="#"><span>Home</span></a>
+                                    <a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
                                 </li>
                                 <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item">
-                                    <a href="#"><span>Resume</span></a>
+                                    <a href="#"><i class="fa-solid fa-graduation-cap"></i><span>Resume</span></a>
                                 </li>
                                 <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item">
-                                    <a href="#"><span>Contact</span></a>
+                                    <a href="#"><i class="fa-regular fa-comment"></i><span>Contact</span></a>
                                 </li>
                                 <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item">
-                                    <a href="#"><span>Download</span></a>
+                                    <a href="#"><i class="fa-solid fa-file-arrow-down"></i><span>Download</span></a>
                                 </li>
                             </ul>
                         </div>
