--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 <body>
     <header>
-        <div class="container-fluid">
             <div class="row no-gutters">
                 <a href="index.html" class="col-md-4 logo">
                 </a>
@@ -35,16 +34,16 @@
                     <div class="row no-gutters">
                         <div class="col">
                             <ul id="nav" class="list-inline menu-container">
-                                <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item">
+                                <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
                                     <a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
                                 </li>
-                                <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item">
+                                <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
                                     <a href="#"><i class="fa-solid fa-graduation-cap"></i><span>Resume</span></a>
                                 </li>
-                                <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item">
+                                <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
                                     <a href="#"><i class="fa-regular fa-comment"></i><span>Contact</span></a>
                                 </li>
-                                <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item">
+                                <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
                                     <a href="#"><i class="fa-solid fa-file-arrow-down"></i><span>Download</span></a>
                                 </li>
                             </ul>
@@ -52,7 +51,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </header>
     <section></section>
     <footer></footer>
