Add 'sweep to bottom'  hover effect on menu items

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <!-- Hover CSS -->
+    <!-- Hover CSS 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
         integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Resume</title>
 </head>
@@ -38,16 +38,16 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul id="nav" class="list-inline menu-container">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-solid fa-graduation-cap"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-regular fa-comment"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
+                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-solid fa-file-arrow-down"></i><span>Download</span></a>
                             </li>
                         </ul>
