Add footer structure and basic styling

--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem hvr-sweep-to-bottom">
+                            <li
+                                class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-solid fa-graduation-cap"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem hvr-sweep-to-bottom">
+                            <li
+                                class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-regular fa-comment"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem hvr-sweep-to-bottom">
+                            <li
+                                class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem hvr-sweep-to-bottom">
                                 <a href="#"><i class="fa-solid fa-file-arrow-down"></i><span>Download</span></a>
                             </li>
                         </ul>
@@ -57,7 +60,19 @@
         </div>
     </header>
     <section></section>
-    <footer></footer>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About</h5>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Download</h5>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">Social</h5>
+            </div>
+        </div>
+    </footer>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
