--- a/index.html
+++ b/index.html
@@ -60,7 +60,48 @@
         </div>
     </header>
     <section class="container-fluid">
-        <div class="row row-table">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">
+                            Personal Info
+                        </h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Name:</p>
+                    </div>
+                    <div class="value">
+                        <p>Rosie Odenkirk</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Address:</p>
+                    </div>
+                    <div class="value">
+                        <p>17 Riverdale, Catskilss, NY, USA</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Phone:</p>
+                    </div>
+                    <div class="value">
+                        <p>163 555 2761</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Email:</p>
+                    </div>
+                    <div class="value">
+                        <p>rosie1@gmail.com</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
@@ -114,8 +155,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
         </div>
     </section>
     <footer class="container-fluid">
