--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menu-container">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem hvr-sweep-to-bottom">
-                                <a href="#"><i class="fa-solid fa-house"></i><span>Home</span></a>
+                                <a href="index.html"><i class="fa-solid fa-house"></i><span>Home</span></a>
                             </li>
                             <li
                                 class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem hvr-sweep-to-bottom">
-                                <a href="#"><i class="fa-solid fa-graduation-cap"></i><span>Resume</span></a>
+                                <a href="resume.html"><i class="fa-solid fa-graduation-cap"></i><span>Resume</span></a>
                             </li>
                             <li
                                 class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem hvr-sweep-to-bottom">
-                                <a href="#"><i class="fa-regular fa-comment"></i><span>Contact</span></a>
+                                <a href="contact.html"><i class="fa-regular fa-comment"></i><span>Contact</span></a>
                             </li>
                             <li
                                 class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem hvr-sweep-to-bottom">
