--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </li>
                             <li
                                 class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem hvr-sweep-to-bottom">
-                                <a href="#"><i class="fa-solid fa-file-arrow-down"></i><span>Download</span></a>
+                                <a href="assets/cv/cv-sample.pdf"><i class="fa-solid fa-file-arrow-down"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -170,7 +170,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV?<br>Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/cv-sample.pdf" target="_blank" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
